--- a/ActivePath/package.json
+++ b/ActivePath/package.json
@@ -17,11 +17,13 @@
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "@vuelidate/core": "^2.0.3",
-    "@vuelidate/validators": "^2.0.3"
+    "@vuelidate/validators": "^2.0.3",
+    "leaflet": "^1.9.4"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.16.5",
+    "@types/leaflet": "^1.9.12",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "@vue/tsconfig": "^0.7.0",
