--- a/ActivePath/package.json
+++ b/ActivePath/package.json
@@ -17,6 +17,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
     "chart.js": "^4.5.1",
+    "firebase": "^12.4.0",
     "leaflet": "^1.9.4",
     "vue": "^3.5.18",
     "vue-chartjs": "^5.3.2",
